fix gap try
git-svn-id: http://svn.dojotoolkit.org/src/trunk@5189 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/widget/templates/TreeDocIcon.css
+++ b/src/widget/templates/TreeDocIcon.css
@@ -55,8 +55,12 @@
     padding-left: 18px;
 }
 
+.TreeIEContent{
+    padding-left: 0px;
+}
+
 /* IE workaround */
-.TreeContentIE {
+div.TreeIEContent {
     padding-left: 0px;
     margin-left: 0px;
 }
