--- a/src/widget/templates/TreeV3.css
+++ b/src/widget/templates/TreeV3.css
@@ -43,12 +43,10 @@
     /* can't make inline - multiline bugs */
 }
 
-.TreeContentIE {
+.TreeIEContent {
     height: 18px;
 }
 
-.TreeContentSafari {
-}
 
 
 
@@ -58,6 +56,10 @@
     float: left;
     display: inline;
     background-repeat : no-repeat;
+}
+
+/* can't use TreeExpandIE, because regexp will replace it with TreeExpandOpen/Closed*/
+div.TreeIEExpand {
     margin-right: -3px;
 }
 
